syntax = "proto3";

package pb;

option go_package = "github.com/sangketkit01/7-coding-test/pb";

import "google/protobuf/timestamp.proto";

message User{
    string _id = 1;
    string name = 2; 
    string email = 3;
    string password = 4;
    google.protobuf.Timestamp created_at = 5;
}

message CreateUserRequest { 
    string name = 1;
    string email = 2;
    string password = 3;
}

message CreateUserResponse{
    User user = 1;
}

message GetUserRequest{
    string _id = 1;
}

message GetUserResponse{
    User user = 1;
}


service SevenCodingTest{
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);

    rpc GetUser (GetUserRequest) returns (GetUserResponse);
}